add floating tmux pane + fix harpoon

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -32,5 +32,15 @@ set -g renumber-windows on
 set -g status-position top
 set -g base-index 1
 
+# Floating window
+set -g @plugin "omerxx/tmux-sessionx"
+set -g @plugin "omerxx/tmux-floax"
+set -g @floax-width '60%'
+set -g @floax-height '60%'
+set -g @floax-border-color 'cyan'
+set -g @floax-text-color 'cyan'
+set -g @floax-bind 'p'
+set -g @floax-change-path 'true'
+
 set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin:/usr/sbin:/sbin"
 run '/opt/homebrew/opt/tpm/share/tpm/tpm
