--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -17,8 +17,8 @@ set-option -g mouse on # shameful I know kek
 
 # General Settings
 unbind C-b
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
+set-option -g prefix M-Space
+bind-key M-Space send-prefix
 
 # vim-like pane switching
 bind -r ^ last-window
