--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-\ Make neovim themes work ˆ-ˆ
+# Make neovim themes work ˆ-ˆ
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 set -g status-style 'bg=#333333 fg=#5eacd3'
