fix copy with mouse

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -13,8 +13,9 @@ set -g @dracula-plugins "cpu-usage ram-usage"
 set -g @dracula-show-left-icon-colors "dark_purple dark_purple"
 
 # Misc
-set-option -g mouse on # shameful I know kek
-unbind -T copy-mode-vi MouseDragEnd1Pane
+#unbind -T copy-mode MouseDragEnd1Pane
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g mouse on
 
 # General Settings
 unbind C-b
