add kill window shortcut

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -29,6 +29,8 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+bind -r d kill-window
+
 # Status Bar
 set -g renumber-windows on
 set -g status-position top
