--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,8 +1,3 @@
-import = [
-    "~/.config/alacritty/themes/themes/tokyo-night.toml"
-]
-
-live_config_reload = true
 
 [env]
 TERM = "xterm-256color"
@@ -38,3 +33,10 @@ y = 10
 [cursor]
 style = "Block"
 unfocused_hollow = true
+
+[general]
+
+live_config_reload = true
+import = [
+    "~/.config/alacritty/themes/themes/tokyo-night.toml"
+]
