--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -22,12 +22,17 @@ unbind C-b
 set-option -g prefix M-Space
 bind-key M-Space send-prefix
 
-# vim-like pane switching
-bind -r ^ last-window
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+# Vim-like pane switching with Meta (Alt)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# vim-like pane resizing
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 bind -r d kill-window
 
