--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -16,6 +16,9 @@ set -g @dracula-show-left-icon-colors "dark_purple dark_purple"
 #unbind -T copy-mode MouseDragEnd1Pane
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g mouse on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+unbind -T copy-mode-vi MouseDragEnd1Pane
+set -g @yank_action 'copy-pipe'
 
 # General Settings
 unbind C-b
@@ -28,11 +31,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# vim-like pane resizing
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+# Move windows left/right with prefix + H/L
+bind H swap-window -t -1\; select-window -t -1
+bind L swap-window -t +1\; select-window -t +1
 
 bind -r d kill-window
 
