--- a/config/common/tmux/tmux.conf
+++ b/config/common/tmux/tmux.conf
@@ -37,6 +37,8 @@ bind L swap-window -t +1\; select-window -t +1
 
 bind -r d kill-window
 
+# SSH
+
 # Status Bar
 set -g renumber-windows on
 set -g status-position top
@@ -52,5 +54,6 @@ set -g @floax-text-color 'cyan'
 set -g @floax-bind 'p'
 set -g @floax-change-path 'true'
 
-set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin:/usr/sbin:/sbin"
-run '/opt/homebrew/opt/tpm/share/tpm/tpm
+# run '/opt/homebrew/opt/tpm/share/tpm/tpm'
+# set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin:/usr/sbin:/sbin"
+run '/usr/share/tmux-plugin-manager/tpm'
