--- a/config/linux/hypr/exec.conf
+++ b/config/linux/hypr/exec.conf
@@ -2,7 +2,6 @@
 
 #exec-once=dunst
 #exec-once=hyprpaper
-#exec-once=~/.config/waybar/launch.sh
 
 # gui for authentication
 # exec-once=/usr/lib/polkit-kde-authentication-agent-1
@@ -13,6 +12,9 @@ exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL
 # clipboard manager
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+
+# waybar
+exec-once = waybar
 
 # auto sleep
 # exec swayidle -w timeout 300 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"'
