--- a/config/linux/hypr/exec.conf
+++ b/config/linux/hypr/exec.conf
@@ -16,5 +16,8 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 # waybar
 exec-once = waybar
 
+# audio
+exec-once = pipewire
+
 # auto sleep
 # exec swayidle -w timeout 300 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"'
