--- a/config/common/tmux/tmux.conf
+++ b/config/common/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # Make neovim themes work ˆ-ˆ
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
-set -g status-style 'bg=#333333 fg=#5eacd3'
+set -as terminal-features ',xterm*:RGB'
+#set -g status-style 'bg=#333333 fg=#5eacd3'
 
 # Dracula Theme Related
 set -g @plugin 'dracula/tmux'
@@ -16,7 +16,7 @@ set -g @dracula-show-left-icon-colors "dark_purple dark_purple"
 #unbind -T copy-mode MouseDragEnd1Pane
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g mouse on
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 unbind -T copy-mode-vi MouseDragEnd1Pane
 set -g @yank_action 'copy-pipe'
 
@@ -54,6 +54,6 @@ set -g @floax-text-color 'cyan'
 set -g @floax-bind 'p'
 set -g @floax-change-path 'true'
 
-# run '/opt/homebrew/opt/tpm/share/tpm/tpm'
+run '/opt/homebrew/opt/tpm/share/tpm/tpm'
 # set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin:/usr/sbin:/sbin"
-run '/usr/share/tmux-plugin-manager/tpm'
+# run '/usr/share/tmux-plugin-manager/tpm'
