--- a/config/linux/hypr/hyprland.conf
+++ b/config/linux/hypr/hyprland.conf
@@ -6,11 +6,11 @@ source = ~/.config/hypr/rules.conf
 monitor=,preferred,auto,2
 
 # Local defined vars
-$mod = SUPER
-$modShift = SUPER_SHIFT
+$mod = ALT
+$modShift = ALT_SHIFT
 
 # Global vars
-env = XCURSOR_SIZE, 24
+env = HYPRCURSOR_SIZE,36
 env = LIBVA_DRIVER_NAME, nvidia
 env = XDG_SESSION_TYPE, wayland
 env = GBM_BACKEND, nvidia-drm
@@ -49,9 +49,9 @@ decoration {
 
 
 input {
-    # Remap capslock to super
-    kb_options = caps:super
+    # Remap capslock to alt
     kb_layout = us
+    kb_options = caps:alt
     follow_mouse = 0
     mouse_refocus = false
 }
@@ -95,13 +95,13 @@ misc {
 
 # App bindings
 bind = $mod, return, exec, alacritty
-bind = $mod, D, exec, ~/.config/rofi/launchers/type-1/launcher.sh
+bind = $mod, D, exec, anyrun
 bind = $modShift, P, exec, hyprshot -m region
 bind = $modShift, E, exit
 
 # Layout bindings
 bind = $mod, V, togglesplit, # dwindle
-bind = $mod, SPACE, togglefloating
+#bind = $mod, SPACE, togglefloating
 bind = $mod, L, exec, hyprctl keyword general:layout "dwindle"
 bind = $modShift, L, exec, hyprctl keyword general:layout "master"
 
