--- a/config/linux/hypr/hyprland.conf
+++ b/config/linux/hypr/hyprland.conf
@@ -49,9 +49,8 @@ decoration {
 
 
 input {
-    # Remap capslock to alt
     kb_layout = us
-    kb_options = caps:alt
+    kb_variant =
     follow_mouse = 0
     mouse_refocus = false
 }
