setup tmux based on linux/mac

--- a/config/common/tmux/tmux.conf
+++ b/config/common/tmux/tmux.conf
@@ -54,6 +54,9 @@ set -g @floax-text-color 'cyan'
 set -g @floax-bind 'p'
 set -g @floax-change-path 'true'
 
-run '/opt/homebrew/opt/tpm/share/tpm/tpm'
-# set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin:/usr/sbin:/sbin"
-# run '/usr/share/tmux-plugin-manager/tpm'
+# Detect OS and use appropriate TPM path
+if-shell "uname | grep -q Darwin" {
+    run '/opt/homebrew/opt/tpm/share/tpm/tpm'
+} {
+    run '/usr/share/tmux-plugin-manager/tpm'
+}
