--- a/config/linux/hypr/hyprland.conf
+++ b/config/linux/hypr/hyprland.conf
@@ -6,8 +6,8 @@ source = ~/.config/hypr/rules.conf
 monitor=,preferred,auto,2
 
 # Local defined vars
-$mod = SUPER
-$modShift = SUPER_SHIFT
+$mod = ALT
+$modShift = ALT_SHIFT
 
 # Global vars
 env = HYPRCURSOR_SIZE,36
@@ -53,9 +53,6 @@ input {
     kb_variant =
     follow_mouse = 0
     mouse_refocus = false
-    
-    # Remap capslock to Super (Mod4)
-    kb_options = caps:super
 }
 
 animations {
