--- a/config/linux/hypr/hyprland.conf
+++ b/config/linux/hypr/hyprland.conf
@@ -37,14 +37,17 @@ decoration {
 
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 8
+        passes = 3
+        new_optimizations = true
+        xray = true
+        ignore_opacity = true
     }
 
-    #drop_shadow = true
-    #shadow_range = 4
-    #shadow_render_power = 3
-    #col.shadow = rgba(1a1a1aee)
+    drop_shadow = true
+    shadow_range = 10
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
 }
 
 
