--- a/config/linux/hypr/rules.conf
+++ b/config/linux/hypr/rules.conf
@@ -1,3 +1,11 @@
 #windowrulev2=fakefullscreen,class:chromium
 #windowrulev2=fakefullscreen,class:chromiu
 windowrulev2 = bordercolor rgb(BB2525) rgb(BEADFA),fullscreen:1 # set bordercolor to red if window is fullscreen
+
+# Anyrun rules
+windowrulev2 = animation slide, class:^(anyrun)$
+windowrulev2 = float, class:^(anyrun)$
+windowrulev2 = noborder, class:^(anyrun)$
+windowrulev2 = layerrule, blur, ^(anyrun)$
+windowrulev2 = rounding 12, class:^(anyrun)$
+windowrulev2 = center, class:^(anyrun)$
