split off from same window

--- a/config/common/tmux/tmux.conf
+++ b/config/common/tmux/tmux.conf
@@ -31,6 +31,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Split panes using current directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 # Move windows left/right with prefix + H/L
 bind H swap-window -t -1\; select-window -t -1
 bind L swap-window -t +1\; select-window -t +1
