--- a/config/common/tmux/tmux.conf
+++ b/config/common/tmux/tmux.conf
@@ -9,7 +9,13 @@ set -g @dracula-show-location false
 set -g @dracula-show-battery false
 set -g @dracula-show-left-icon "session"
 set -g @dracula-refresh-rate 30
-set -g @dracula-plugins "cpu-usage ram-usage"
+set -g @dracula-plugins "none"
+set -g @dracula-show-empty-plugins false
+set -g @dracula-show-powerline false
+set -g @dracula-show-network false
+set -g @dracula-show-weather false
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-timezone false
 set -g @dracula-show-left-icon-colors "dark_purple dark_purple"
 
 # Misc
