feat: add cursor thickness adjustment setting

--- a/config/common/ghostty/config
+++ b/config/common/ghostty/config
@@ -29,6 +29,7 @@ shell-integration = fish
 # Cursor
 cursor-style = block
 cursor-style-blink = false
+adjust-cursor-thickness = 2
 shell-integration-features = no-cursor
 
 # Keybindings
