--- a/config/common/lazygit/config.yml
+++ b/config/common/lazygit/config.yml
@@ -1,13 +1,8 @@
 customCommands:
-  - key: "<c-a>" # ctrl + a
-    description: "pick AI commit"
-    command: 'git commit -m "{{.Form.Msg}}"'
-    context: "files"
-    prompts:
-      - type: "menuFromCommand"
-        title: "ai Commits"
-        key: "Msg"
-        command: "bunx bunnai"
-        filter: '^(?P<number>\d+)\.\s(?P<message>.+)$'
-        valueFormat: "{{ .message }}"
-        labelFormat: "{{ .number }}: {{ .message | green }}"
+  - key: <c-a>
+    description: Pick AI commit (copy)
+    command: mise x node@20 -- aicommit2 -c && pbpaste > .git/LAZYGIT_PENDING_COMMIT
+    context: files
+    subprocess: true
+    showOutput: true
+
