feat(claude): add initial setup for Claude MCP servers

--- a/config/common/lazygit/config.yml
+++ b/config/common/lazygit/config.yml
@@ -3,6 +3,4 @@ customCommands:
     description: Pick AI commit (copy)
     command: mise x node@20 -- aicommit2 -c && pbpaste > .git/LAZYGIT_PENDING_COMMIT
     context: files
-    subprocess: true
-    showOutput: true
-
+    output: terminal
