--- a/config/linux/hypr/hyprland.conf
+++ b/config/linux/hypr/hyprland.conf
@@ -44,10 +44,12 @@ decoration {
         ignore_opacity = true
     }
 
-    drop_shadow = true
-    shadow_range = 10
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+        enabled = true
+        range = 10
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
 }
 
 
