--- a/config/linux/hypr/rules.conf
+++ b/config/linux/hypr/rules.conf
@@ -6,6 +6,6 @@ windowrulev2 = bordercolor rgb(BB2525) rgb(BEADFA),fullscreen:1 # set bordercolo
 windowrulev2 = animation slide, class:^(anyrun)$
 windowrulev2 = float, class:^(anyrun)$
 windowrulev2 = noborder, class:^(anyrun)$
-windowrulev2 = layerrule, blur, ^(anyrun)$
+layerrule = blur, anyrun
 windowrulev2 = rounding 12, class:^(anyrun)$
 windowrulev2 = center, class:^(anyrun)$
