--- a/config-linux/hypr/hyprland.conf
+++ b/config-linux/hypr/hyprland.conf
@@ -1,158 +1,12 @@
-# Source external files
-source = ~/.config/hypr/exec.conf
+# Hyprland Configuration
+# Learn more: https://wiki.hyprland.org/Configuring/
+
+# Source all files
+source = ~/.config/hypr/monitors.conf
+source = ~/.config/hypr/envs.conf
+source = ~/.config/hypr/input.conf
+source = ~/.config/hypr/appearance.conf
 source = ~/.config/hypr/rules.conf
-
-# Monitor configuration
-monitor=,preferred,auto,2
-
-# Local defined vars
-$mod = ALT
-$modShift = ALT_SHIFT
-
-# Global vars
-env = HYPRCURSOR_SIZE,36
-env = LIBVA_DRIVER_NAME, nvidia
-env = XDG_SESSION_TYPE, wayland
-env = GBM_BACKEND, nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME, nvidia
-env = WLR_NO_HARDWARE_CURSORS, 1
-
-# Settings and stuff
-general {
-    gaps_in = 10
-    gaps_out = 10
-    border_size = 3
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    layout = dwindle
-}
-
-cursor {
-    inactive_timeout = 2
-}
-
-decoration {
-    rounding = 5
-
-    blur {
-        enabled = true
-        size = 8
-        passes = 3
-        new_optimizations = true
-        xray = true
-        ignore_opacity = true
-    }
-
-    shadow {
-        enabled = true
-        range = 10
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
-}
-
-
-input {
-    kb_layout = us
-    kb_variant =
-    follow_mouse = 0
-    mouse_refocus = false
-}
-
-animations {
-    enabled = true
-
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.7, 0.1, 1.0
-
-    animation = windows, 1, 4, myBezier
-    animation = windowsOut, 1, 4, default, popin 80%
-    animation = border, 1, 5, default
-    animation = borderangle, 1, 4, default
-    animation = fade, 1, 4, default
-    animation = workspaces, 1, 3, default
-}
-
-dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = true # master switch for pseudotiling. Enabling is bound to super + P in the keybinds section below
-    preserve_split = true # you probably want this
-}
-
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    #new_is_master = true
-}
-
-misc {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    # force_default_wallpaper = -1 # Set to 0 to disable the anime mascot wallpapers
-}
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
-# App bindings
-bind = $mod, return, exec, alacritty
-bind = $mod, D, exec, anyrun
-bind = $modShift, P, exec, hyprshot -m region
-bind = $modShift, E, exit
-
-# Layout bindings
-bind = $mod, V, togglesplit, # dwindle
-#bind = $mod, SPACE, togglefloating
-bind = $mod, L, exec, hyprctl keyword general:layout "dwindle"
-bind = $modShift, L, exec, hyprctl keyword general:layout "master"
-
-# Window bindings
-bind = $mod, F, fullscreen, 1
-bind = $modShift, Q, killactive
-
-bind = $modShift, H, movewindow, l
-bind = $modShift, J, movewindow, d
-bind = $modShift, K, movewindow, u
-bind = $modShift, L, movewindow, r
-
-bind = $mod, right, resizeactive, 50 0
-bind = $mod, left, resizeactive, -50 0
-bind = $mod, up, resizeactive, 0 -50
-bind = $mod, down, resizeactive, 0 50
-
-# Movement bindings
-bind = $mod, H, movefocus, l
-bind = $mod, J, movefocus, d
-bind = $mod, K, movefocus, u
-bind = $mod, L, movefocus, r
-
-# Workspace bindings
-bind = $mod, 1, workspace, 1
-bind = $mod, 2, workspace, 2
-bind = $mod, 3, workspace, 3
-bind = $mod, 4, workspace, 4
-bind = $mod, 5, workspace, 5
-bind = $mod, 6, workspace, 6
-bind = $mod, 7, workspace, 7
-bind = $mod, 8, workspace, 8
-bind = $mod, 9, workspace, 9
-bind = $mod, 0, workspace, 10
-
-bind = $modShift, 1, movetoworkspacesilent, 1
-bind = $modShift, 2, movetoworkspacesilent, 2
-bind = $modShift, 3, movetoworkspacesilent, 3
-bind = $modShift, 4, movetoworkspacesilent, 4
-bind = $modShift, 5, movetoworkspacesilent, 5
-bind = $modShift, 6, movetoworkspacesilent, 6
-bind = $modShift, 7, movetoworkspacesilent, 7
-bind = $modShift, 8, movetoworkspacesilent, 8
-bind = $modShift, 9, movetoworkspacesilent, 9
-bind = $modShift, 0, movetoworkspacesilent, 10
-
-bindm = $mod, mouse:272, movewindow
-bindm = $mod, mouse:273, resizewindow
-
-bind = $modShift, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+source = ~/.config/hypr/bindings/tiling.conf
+source = ~/.config/hypr/bindings/utils.conf
+source = ~/.config/hypr/autostart.conf
