--- a/config-linux/hypr/autostart.conf
+++ b/config-linux/hypr/autostart.conf
@@ -1,20 +1,14 @@
 # Autostart applications
 
-# Wallpaper
-exec-once = hyprpaper
-
-# Status bar
-exec-once = waybar
-
-# Notification daemon
-exec-once = dunst
-
-# Audio
-exec-once = pipewire
+exec-once = uwsm app -- hyprpaper
+exec-once = uwsm app -- hypridle
+exec-once = uwsm app -- waybar
+exec-once = uwsm app -- dunst
+exec-once = uwsm app -- pipewire
 
 # Xwayland scaling
-exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
+exec-once = uwsm app -- xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 
 # Clipboard manager
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
+exec-once = uwsm app -- wl-paste --type text --watch cliphist store
+exec-once = uwsm app -- wl-paste --type image --watch cliphist store
