--- a/config-linux/hypr/appearance.conf
+++ b/config-linux/hypr/appearance.conf
@@ -14,35 +14,51 @@ cursor {
 }
 
 decoration {
-    rounding = 5
-
-    blur {
-        enabled = true
-        size = 8
-        passes = 3
-        new_optimizations = true
-        xray = true
-        ignore_opacity = true
-    }
+    rounding = 0
 
     shadow {
         enabled = true
-        range = 10
+        range = 2
         render_power = 3
         color = rgba(1a1a1aee)
     }
+
+    # https://wiki.hyprland.org/Configuring/Variables/#blur
+    blur {
+        enabled = true
+        size = 3
+        passes = 1
+
+        vibrancy = 0.1696
+    }
 }
 
+# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = true
-    bezier = myBezier, 0.05, 0.7, 0.1, 1.0
+    enabled = yes, please :)
 
-    animation = windows, 1, 4, myBezier
-    animation = windowsOut, 1, 4, default, popin 80%
-    animation = border, 1, 5, default
-    animation = borderangle, 1, 4, default
-    animation = fade, 1, 4, default
-    animation = workspaces, 1, 3, default
+    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = linear,0,0,1,1
+    bezier = almostLinear,0.5,0.5,0.75,1.0
+    bezier = quick,0.15,0,0.1,1
+
+    animation = global, 1, 10, default
+    animation = border, 1, 5.39, easeOutQuint
+    animation = windows, 1, 4.79, easeOutQuint
+    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+    animation = windowsOut, 1, 1.49, linear, popin 87%
+    animation = fadeIn, 1, 1.73, almostLinear
+    animation = fadeOut, 1, 1.46, almostLinear
+    animation = fade, 1, 3.03, quick
+    animation = layers, 1, 3.81, easeOutQuint
+    animation = layersIn, 1, 4, easeOutQuint, fade
+    animation = layersOut, 1, 1.5, linear, fade
+    animation = fadeLayersIn, 1, 1.79, almostLinear
+    animation = fadeLayersOut, 1, 1.39, almostLinear
+    animation = workspaces, 0, 0, ease
 }
 
 dwindle {
@@ -51,9 +67,13 @@ dwindle {
 }
 
 master {
-    # new_is_master = true
+    new_is_master = true
 }
 
+# https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    # force_default_wallpaper = -1
+    disable_hyprland_logo = true
+    disable_splash_rendering  = true
+    focus_on_activate = true
 }
+
