--- a/config-linux/hypr/envs.conf
+++ b/config-linux/hypr/envs.conf
@@ -1,5 +1,6 @@
 # Environment variables
-env = HYPRCURSOR_SIZE,36
+env = HYPRCURSOR_SIZE,64
+env = XCURSOR_SIZE,64
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
