--- a/config-linux/hypr/input.conf
+++ b/config-linux/hypr/input.conf
@@ -4,4 +4,8 @@ input {
     kb_variant =
     follow_mouse = 0
     mouse_refocus = false
+    
+    # Mouse sensitivity settings
+    sensitivity = -0.1        # Slightly slower mouse movement
+    accel_profile = flat      # No mouse acceleration
 }
