--- a/config-linux/hypr/rules.conf
+++ b/config-linux/hypr/rules.conf
@@ -1,6 +1,6 @@
 #windowrulev2=fakefullscreen,class:chromium
 #windowrulev2=fakefullscreen,class:chromiu
-windowrulev2 = bordercolor rgb(BB2525) rgb(BEADFA),fullscreen:1 # set bordercolor to red if window is fullscreen
+# windowrulev2 = bordercolor rgb(BB2525) rgb(BEADFA),fullscreen:1 # disabled red border for fullscreen
 
 # Anyrun rules
 windowrulev2 = animation slide, class:^(anyrun)$
