--- a/config-linux/hypr/autostart.conf
+++ b/config-linux/hypr/autostart.conf
@@ -9,6 +9,9 @@ exec-once = uwsm app -- pipewire
 # Xwayland scaling
 exec-once = uwsm app -- xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 
+# Walker launcher daemon
+exec-once = uwsm app -- elephant
+
 # Clipboard manager
 exec-once = uwsm app -- wl-paste --type text --watch cliphist store
 exec-once = uwsm app -- wl-paste --type image --watch cliphist store
