--- a/config-linux/hypr/bindings/utils.conf
+++ b/config-linux/hypr/bindings/utils.conf
@@ -6,7 +6,7 @@ $modShift = ALT_SHIFT
 
 # Application launchers
 bindd = $mod, return, Launch terminal, exec, ghostty
-bindd = $mod, D, Launch app runner, exec, anyrun
+bindd = $mod, D, Launch app runner, exec, walker
 
 # Screenshots
 bindd = $modShift, P, Take screenshot region, exec, hyprshot -m region
