--- a/config-linux/hypr/rules.conf
+++ b/config-linux/hypr/rules.conf
@@ -2,10 +2,10 @@
 #windowrulev2=fakefullscreen,class:chromiu
 # windowrulev2 = bordercolor rgb(BB2525) rgb(BEADFA),fullscreen:1 # disabled red border for fullscreen
 
-# Anyrun rules
-windowrulev2 = animation slide, class:^(anyrun)$
-windowrulev2 = float, class:^(anyrun)$
-windowrulev2 = noborder, class:^(anyrun)$
-layerrule = blur, anyrun
-windowrulev2 = rounding 12, class:^(anyrun)$
-windowrulev2 = center, class:^(anyrun)$
+# Walker rules
+windowrulev2 = animation slide, class:^(walker)$
+windowrulev2 = float, class:^(walker)$
+windowrulev2 = noborder, class:^(walker)$
+layerrule = blur, walker
+windowrulev2 = rounding 12, class:^(walker)$
+windowrulev2 = center, class:^(walker)$
