feat(hypr): add idle, lock, and wallpaper configs
- Add hypridle config with dim, lock, dpms, and suspend timers

- Add hyprlock config with blurred wallpaper background

- Simplify hyprpaper to use single wallpaper

- Add hypr ecosystem packages to ensure-packages.sh

- Update justfile to copy wallpapers on hyprland install

- Change close window binding to ALT+SHIFT+W

--- a/config-linux/hypr/bindings/tiling.conf
+++ b/config-linux/hypr/bindings/tiling.conf
@@ -5,7 +5,7 @@ $mod = ALT
 $modShift = ALT_SHIFT
 
 # Close window
-bindd = $mod, W, Close active window, killactive,
+bindd = $modShift, W, Close active window, killactive,
 
 # Control tiling
 bindd = $mod, V, Toggle split, togglesplit, # dwindle
@@ -62,8 +62,8 @@ bindd = $modShift, 9, Move window to workspace 9, movetoworkspacesilent, 9
 bindd = $modShift, 0, Move window to workspace 10, movetoworkspacesilent, 10
 
 # Special workspace (scratchpad)
-bindd = $mod, S, Toggle special workspace, togglespecialworkspace, magic
-bindd = $modShift, S, Move to special workspace, movetoworkspace, special:magic
+# bindd = $mod, S, Toggle special workspace, togglespecialworkspace, magic
+# bindd = $modShift, S, Move to special workspace, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with $mod + scroll
 bindd = $mod, mouse_down, Scroll to next workspace, workspace, e+1
