--- a/config-linux/hypr/hyprpaper.conf
+++ b/config-linux/hypr/hyprpaper.conf
@@ -1,7 +1,3 @@
-preload = ~/.config/wallpapers/lucy.jpg
-preload = ~/.config/wallpapers/NGE/unit-02.jpg
-preload = ~/.config/wallpapers/NGE/finalScene.jpg
-preload = ~/.config/wallpapers/sailor.jpeg
+preload = ~/.config/wallpapers/wallpaper.jpg
 
-wallpaper = HDMI-A-2,~/.config/wallpapers/NGE/unit-02.jpg
-wallpaper = HDMI-A-1,~/.config/wallpapers/sailor.jpeg
+wallpaper = ,~/.config/wallpapers/wallpaper.jpg
