fix(hypr): add dbus env setup and remove pipewire exec
- Add dbus-update-activation-environment for systemd services

- Remove redundant pipewire autostart (handled by systemd)

--- a/config-linux/hypr/autostart.conf
+++ b/config-linux/hypr/autostart.conf
@@ -1,10 +1,12 @@
 # Autostart applications
 
+# Initialize dbus environment for systemd user services
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
 exec-once = uwsm app -- hyprpaper
 exec-once = uwsm app -- hypridle
 exec-once = uwsm app -- waybar
 exec-once = uwsm app -- dunst
-exec-once = uwsm app -- pipewire
 
 # Xwayland scaling
 exec-once = uwsm app -- xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
