feat: add media keys and update tmux search dirs
- add volume and playback media key bindings to hyprland

- add SUPER+L screen lock keybind

- update tmux sessionizer/windownizer search directories

- add dynamic directory checking to windownizer

--- a/config-linux/hypr/bindings/utils.conf
+++ b/config-linux/hypr/bindings/utils.conf
@@ -12,6 +12,7 @@ bindd = $mod, D, Launch app runner, exec, walker
 bindd = $modShift, P, Take screenshot region, exec, hyprshot -m region
 
 # System
+bindd = SUPER, L, Lock screen, exec, loginctl lock-session
 bindd = $modShift, E, Exit Hyprland, exit
 
 # Clipboard
