--- a/config-linux/hypr/hyprland.conf
+++ b/config-linux/hypr/hyprland.conf
@@ -9,4 +9,5 @@ source = ~/.config/hypr/appearance.conf
 source = ~/.config/hypr/rules.conf
 source = ~/.config/hypr/bindings/tiling.conf
 source = ~/.config/hypr/bindings/utils.conf
+source = ~/.config/hypr/bindings/media.conf
 source = ~/.config/hypr/autostart.conf
