feat(hypr): add keyboard repeat rate settings
- Set repeat_rate to 50 chars/sec (default: 25)

- Set repeat_delay to 300ms (default: 600)

--- a/config-linux/hypr/input.conf
+++ b/config-linux/hypr/input.conf
@@ -4,7 +4,11 @@ input {
     kb_variant =
     follow_mouse = 0
     mouse_refocus = false
-    
+
+    # Key repeat settings
+    repeat_rate = 50          # Characters per second (default: 25)
+    repeat_delay = 300        # Ms before repeat starts (default: 600)
+
     # Mouse sensitivity settings
     sensitivity = -0.1        # Slightly slower mouse movement
     accel_profile = flat      # No mouse acceleration
