feat(hypr): add suspend keybind and fix lock modifier
- Add +L binding to suspend system

- Change SUPER to  for lock screen consistency

--- a/config-linux/hypr/bindings/utils.conf
+++ b/config-linux/hypr/bindings/utils.conf
@@ -12,7 +12,8 @@ bindd = $mod, D, Launch app runner, exec, walker
 bindd = $modShift, P, Take screenshot region, exec, hyprshot -m region
 
 # System
-bindd = SUPER, L, Lock screen, exec, loginctl lock-session
+bindd = $mod, L, Lock screen, exec, loginctl lock-session
+bindd = $modShift, L, Suspend system, exec, systemctl suspend
 bindd = $modShift, E, Exit Hyprland, exit
 
 # Clipboard
