--- a/config-linux/hypr/hypridle.conf
+++ b/config-linux/hypr/hypridle.conf
@@ -24,8 +24,8 @@ listener {
     on-resume = hyprctl dispatch dpms on
 }
 
-# Suspend after 30 minutes
-listener {
-    timeout = 1800
-    on-timeout = systemctl suspend
-}
+## Suspend after 30 minutes
+#listener {
+#    timeout = 1800
+#    on-timeout = systemctl suspend
+#}
