feat: add OSC 52 clipboard support for SSH
- Enable clipboard-read/write in ghostty config

- Configure nvim to use OSC 52 over SSH connections

- Enable passthrough and set-clipboard in tmux

--- a/config-common/ghostty/config
+++ b/config-common/ghostty/config
@@ -29,6 +29,10 @@ gtk-single-instance = false
 # Shell integration
 shell-integration = fish
 
+# Clipboard (OSC 52)
+clipboard-read = allow
+clipboard-write = allow
+
 # Desktop notifications
 desktop-notifications = false
 
