--- a/config-common/tmux/tmux.conf
+++ b/config-common/tmux/tmux.conf
@@ -47,7 +47,9 @@ bind L swap-window -t +1\; select-window -t +1
 
 bind -r d kill-window
 
-# SSH
+# SSH - allow OSC 52 clipboard passthrough
+set -g allow-passthrough on
+set -s set-clipboard on
 
 # Status Bar
 set -g renumber-windows on
