chore(linux): change lock keybind and add npm global setup
- Change lock screen keybind from mod+L to mod+X

- Add npm-linux task to configure ~/.npm-global prefix

--- a/config-linux/hypr/bindings/utils.conf
+++ b/config-linux/hypr/bindings/utils.conf
@@ -12,7 +12,7 @@ bindd = $mod, D, Launch app runner, exec, walker
 bindd = $modShift, P, Take screenshot region, exec, hyprshot -m region
 
 # System
-bindd = $mod, L, Lock screen, exec, loginctl lock-session
+bindd = $mod, X, Lock screen, exec, loginctl lock-session
 bindd = $modShift, L, Suspend system, exec, systemctl suspend
 bindd = $modShift, E, Exit Hyprland, exit
 
