chore(hypr): change suspend keybind to mod+shift+x

--- a/config-linux/hypr/bindings/utils.conf
+++ b/config-linux/hypr/bindings/utils.conf
@@ -13,7 +13,7 @@ bindd = $modShift, P, Take screenshot region, exec, hyprshot -m region
 
 # System
 bindd = $mod, X, Lock screen, exec, loginctl lock-session
-bindd = $modShift, L, Suspend system, exec, systemctl suspend
+bindd = $modShift, X, Suspend system, exec, systemctl suspend
 bindd = $modShift, E, Exit Hyprland, exit
 
 # Clipboard
