fix(tmux): use user-local tpm path on linux
- copy tmux.conf to ~/.tmux.conf instead of config dir
- auto-clone tpm to ~/.tmux/plugins/tpm on linux
- update tmux.conf to source tpm from user directory

--- a/config-common/tmux/tmux.conf
+++ b/config-common/tmux/tmux.conf
@@ -70,5 +70,5 @@ set -g @floax-change-path 'true'
 if-shell "uname | grep -q Darwin" {
     run '/opt/homebrew/opt/tpm/share/tpm/tpm'
 } {
-    run '/usr/share/tmux-plugin-manager/tpm'
+    run '~/.tmux/plugins/tpm/tpm'
 }
