--- a/config-common/tmux/tmux.conf
+++ b/config-common/tmux/tmux.conf
@@ -50,6 +50,9 @@ bind L swap-window -t +1\; select-window -t +1
 
 bind -r d kill-window
 
+# Fullscreen (zoom) pane
+bind f resize-pane -Z
+
 # SSH - allow OSC 52 clipboard passthrough
 set -g allow-passthrough on
 set -s set-clipboard on
